Added api gateway, api server and refactoring and swagger aggregation